# cargo-cut-diagnostics

./: Cargo.toml  README.md
src/: main.rs
