[package]
name = "cargo-cut-diagnostics"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand to display only the first page of diagnostics"
repository = "https://github.com/SabrinaJewson/cargo-cut-diagnostics"
license = "MIT"

[dependencies]
anyhow = "1.0.51"
cargo_metadata = "0.14.1"
serde_json = "1.0.73"
terminal_size = "0.1.17"
textwrap = "0.14.2"
